--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!--NavBar-->
 
-  <nav id="burger" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav id="burger" class="navbar navbar-expand-lg navbar-light bg-light position-sticky z-2" style="top: 0;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img src="./public/css/img romyk/logo.png" alt="" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -112,9 +112,9 @@
   <!--Deuxieme section coupe de glace-->
 
   <section>
-    <div class="container my-5">
+    <div class="container ">
       <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-lg-5 col-md-12 mx-5 mt-5">
+        <div class="col-lg-5 col-md-12 mt-5">
           <img class="img-fluid" src="./public/css/img romyk/about-img.png" alt="" />
         </div>
         <div class="col-lg-6 col-md-12 mt-5 text-center text-lg-start">
@@ -144,7 +144,7 @@
     </div>
     <div class="container d-flex justify-content-center">
       <div class="row mx-auto">
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center align-items-center">
           <div class="card text-center carte">
             <div class="p-5">
               <img class="card-img-top img-fluid" style="width: 40%; margin: 0 auto"
@@ -159,7 +159,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-6 mb-4 d-flex flex-md-column justify-content-center align-items-center">
           <div class="card text-center carte">
             <div class="p-5">
               <img class="card-img-top img-fluid" style="width: 15%; margin: 0 auto"
@@ -174,7 +174,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center align-items-center">
           <div class="card text-center carte">
             <div class="p-5">
               <img class="card-img-top img-fluid" style="width: 40%; margin: 0 auto"
@@ -193,7 +193,7 @@
     </div>
     <div class="container d-flex justify-content-center">
       <div class="row mx-auto">
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center align-items-center">
           <div class="carte card text-center">
             <div class="p-5">
               <img class="card-img-top img-fluid" style="width: 40%; margin: 0 auto"
@@ -208,7 +208,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center align-items-center">
           <div class="carte card text-center">
             <div class="p-5 ">
               <img class="card-img-top img-fluid" style="width: 40%; margin: 0 auto"
@@ -223,7 +223,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center align-items-center">
           <div class="carte card text-center">
             <div class="p-5 v">
               <img class="card-img-top img-fluid " style="width: 40%; margin: 0 auto"
@@ -259,9 +259,9 @@
         Ice cream is a beloved frozen dessert enjoyed
       </p>
     </div>
-    <div class="container my-2">
-      <div class="row text-start">
-        <div class="col-lg-4 col-md-6 mb-4">
+    <div class="container my-2 ">
+      <div class="row text-start ">
+        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center align-items-center">
           <div class="bordure p-4 h-100">
             <h4>
               <img class="img-fluid" src="./public/css/img romyk/icon-1.png" alt="" />
@@ -274,7 +274,7 @@
             </p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center align-items-center">
           <div class="bordure p-4 h-100">
             <h4>
               <img class="img-fluid" src="./public/css/img romyk/icon-1.png" alt="" />
@@ -287,7 +287,7 @@
             </p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center align-items-center">
           <div class="bordure p-4 h-100">
             <h4>
               <img class="img-fluid" src="./public/css/img romyk/icon-1.png" alt="" />
@@ -316,8 +316,7 @@
       <div class="pt-5">
         <h1 class="text-center">Testimonial</h1>
       </div>
-      <div id="carouselExampleFade"
-        class="carousel slide carousel-fade d-flex justify-content-center align-items-center" style="height: 100vh">
+      <div id="carouselExampleFade"class="carousel slide carousel-fade d-flex flex-md-column justify-content-center align-items-center" style="height: 100vh">
         <div class="parent">
           <div class="carousel-item active">
             <div class="pt-5">
@@ -336,7 +335,7 @@
               <img src="./public/css/img romyk/client-img.png" class="img-fluid mx-auto d-block" alt="Image 1" />
             </div>
           </div>
-          <div class="carousel-item text-danger pt-5">
+          <div class="carousel-item pt-5">
             <p class="text-center m-5">
               Orem ipsum dolor sit amet consectetur adipisicing elit. Numquam
               expedita doloribus eum accusamus rerum dolorem asperiores
@@ -348,7 +347,7 @@
             <h5 class="text-center">Marie Fen</h5>
             <img src="./public/css/img romyk/client-img.png" class="img-fluid mx-auto d-block" alt="Image 2" />
           </div>
-          <div class="carousel-item text-primary pt-5">
+          <div class="carousel-item pt-5">
             <p class="text-center m-5">
               Numquam asperiores eligendi quae cupiditate vel, nam, qui corporis
               expedita doloribus eum accusamus rerum dolorem asperiores
@@ -378,19 +377,21 @@
   <!--Footer et formulaire-->
 
   <footer>
-    <div class="container-fluid text-light w-100 p-5 pb-0 bgFooter">
+    <div class="container-fluid text-light w-100 pt-5 pb-0 bgFooter">
       <div class="row">
-        <div class="col-lg-5 col-md-12 my-3 footerGauche">
-          <h1 class="border-bottom titreF">Contact Us</h1>
+        <div class="col-lg-5 col-md-12 my-3 footerGauche d-flex flex-column align-items-left">
+          <h1 class="border-bottom titreF mt-5">Contact Us</h1>
           <h6 class="border-bottom custom-width">NAME</h6>
           <h6 class="border-bottom custom-width">EMAIL</h6>
           <h6 class="border-bottom custom-width">PHONE NUMBER</h6>
           <h6 class="border-bottom custom-width">MESSAGE</h6>
-          <button type="button" class="btn btn-danger mt-3 btn-lg footBtn">
-            SEND
-          </button>
+          <div>
+            <button type="button" class="btn btn-danger mt-3 btn-lg footBtn">
+              SEND
+            </button>
+          </div>
         </div>
-        <div class="container col-lg-6 col-md-12 my-5 d-flex flex-column">
+        <div class="container col-lg-6 col-md-12 my-5 d-flex flex-column ">
           <div class="footerDroitH">
             <h6 class="text-end">
               <i class="bi bi-geo-alt-fill iconColor"></i> Making this the first time.
@@ -404,7 +405,7 @@
             </div>
             <div class="d-flex w-75 inputBtn">
               <input type="text" class="form-control inp w-75" placeholder="Your email" />
-              <button type="button" class="btnFin btn btn-danger btn-lg w-25 fs-6">
+              <button type="button" class="btnFin btn btn-danger btn-lg w-25 ">
                 RECHERCHE
               </button>
             </div>
